Create customers.json. Create seperate json call for customer and customers.

--- a/index.html
+++ b/index.html
@@ -15,10 +15,22 @@
 			<button id="button1">Get Customer</button>
 			<button id="button2">Get Customers</button>
 			<br><br>
+
 			<h1>Customer</h1>
 			<div id="customer"></div>
+
 			<h1>Customers</h1>
-			<div id="customers"></div>
+				<table class="u-full-width">
+					<thead>
+						<tr>
+							<th>ID #</th>
+							<th>Name</th>
+							<th>Company</th>
+							<th>Phone Number</th>
+						</tr>
+					</thead>
+					<tbody id="customers-table-body"></tbody>
+				</table>
 		</div>
 
 	<script src="app.js"></script>
